Fix spacing on mobile for cart drawer

--- a/assets/base.css
+++ b/assets/base.css
@@ -2653,7 +2653,10 @@ details[open] > .header__submenu {
 .header__menu-item {
   padding: 1.2rem;
   text-decoration: none;
-  color: rgba(var(--color-foreground), 0.75);
+  font-size: 1.6rem;
+  font-weight: 600;
+  padding-right: 3rem;
+  color: rgba(var(--color-foreground), 0.65);
 }
 
 .header__menu-item:hover {
@@ -2665,8 +2668,8 @@ details[open] > .header__submenu {
 }
 
 .header__menu-item:hover span {
-  text-decoration: underline;
-  text-underline-offset: 0.3rem;
+  text-decoration: none;
+  text-underline-offset: 0.5rem;
 }
 
 details[open] > .header__menu-item {
@@ -2683,12 +2686,14 @@ details[open] > .header__menu-item .icon-caret {
 
 .header__active-menu-item {
   transition: text-decoration-thickness var(--duration-short) ease;
-  color: rgb(var(--color-foreground));
+  color: rgb(var(--color-base-accent-1));
+  font-weight: 600;
   text-decoration: underline;
-  text-underline-offset: 0.3rem;
+  text-underline-offset: 0.5rem;
 }
 
 .header__menu-item:hover .header__active-menu-item {
+  text-decoration: underline;
   text-decoration-thickness: 0.2rem;
 }
 
